--- a/Docker-Compose-build.yml
+++ b/Docker-Compose-build.yml
@@ -15,22 +15,36 @@ name: Production
 
 services:
   backend:
-    container_name: freeport-backend
     image: anekdotin/freeport-backend:latest
     restart: always
     build:
         context: ../backend
         dockerfile: Dockerfile.prod
+    deploy:
+      replicas: 4
     volumes:
         - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
     depends_on:
-        -   redis
+        - redis
+    
     env_file:
         - .env
-    ports:
-      - '5000:5000'
     networks:
       - freeport
+
+
+  backendproxy:
+      container_name: freeport-backend-proxy
+      image: nginx:latest
+      restart: always
+      volumes:
+        - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      ports:
+        - "5000:5000"
+      depends_on:
+        - backend
+      networks:
+        - freeport
 
   frontend:
     container_name: freeport-frontend
@@ -41,6 +55,8 @@ services:
       dockerfile: Dockerfile.prod
     ports:
       - "5010:5010"
+    environment:
+      - backend="backend"
     networks:
       - freeport
 
