--- a/Docker-Compose-PRODUCTION.yml
+++ b/Docker-Compose-PRODUCTION.yml
@@ -21,17 +21,31 @@ services:
         - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
     depends_on:
         - redis
-    ports:
-      - '5000:5000'
+    deploy:
+      replicas: 4
+    env_file:
+        - .env
     networks:
       - freeport
 
+  backendproxy:
+      container_name: freeport-backend-proxy
+      image: nginx:latest
+      restart: always
+      volumes:
+        - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      ports:
+        - "5000:5000"
+      depends_on:
+        - backend
+      networks:
+        - freeport
 
   frontend:
     image: anekdotin/freeport-frontend:latest
     restart: on-failure
     ports:
-      - 5010:5010'
+      - "5010:5010"
     networks:
       - freeport
 
@@ -43,6 +57,8 @@ services:
         - '6379:6379'
       volumes:
         - freeport_cache:${REDIS_DIRECTORY}
+      env_file:
+        - .env
       networks:
         - freeport
 
@@ -59,6 +75,8 @@ services:
         - '5055:5055'
     volumes:
         - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
+    env_file:
+        - .env
     networks:
       - freeport
 
@@ -69,6 +87,8 @@ services:
         - '5075:5075'
     networks:
       - freeport
+    env_file:
+        - .env
     volumes:
       - freeport_btc_wallet_data:${BTC_WALLET_DATA}
 
@@ -79,6 +99,8 @@ services:
         - '5080:5080'
     networks:
       - freeport
+    env_file:
+        - .env
     volumes:
       - freeport_bch_wallet_data:${BCH_WALLET_DATA}
 
@@ -87,7 +109,16 @@ services:
     image: anekdotin/freeport-wallet-xmr:latest
     ports:
         - '5085:5085'
+    env_file:
+        - .env
     volumes:
       - freeport_xmr_wallet_data:${XMR_WALLET_DATA}
+    networks:
+      - freeport
+
+  controller:
+    image: anekdotin/freeport-controller:latest
+    ports:
+        - '5099:5099'
     networks:
       - freeport
