--- a/Docker-Compose-dev.yml
+++ b/Docker-Compose-dev.yml
@@ -12,6 +12,7 @@ networks:
 
 name: LocalDevelopment
 services:
+
   backend:
     container_name: freeport-backend-dev
     restart: on-failure
@@ -36,13 +37,13 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend:/app
+      - ../frontend/node_modules:/app/node_modules
     ports:
-      - '5173:5173'
+      - '8080:8080'
     networks:
       - freeport
     command: npm run serve 
-    environment: 
-      - CHOKIDAR_USEPOLLING=true
+
 
   database:
     container_name: freeport-database-dev
