Updated docker and requirements

--- a/Docker-Compose-build.yml
+++ b/Docker-Compose-build.yml
@@ -20,134 +20,101 @@ services:
     build:
         context: ../backend
         dockerfile: Dockerfile.prod
-    deploy:
-      replicas: 4
-    volumes:
-        - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
-    depends_on:
-        - redis
     env_file:
         - .env
     networks:
       - freeport
 
-
-  backendproxy:
-      container_name: freeport-backend-proxy
-      image: nginx:latest
-      restart: always
-      volumes:
-        - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      ports:
-        - "5000:5000"
-      depends_on:
-        - backend
-      networks:
-        - freeport
-
-  frontend:
-    container_name: freeport-frontend
-    image: anekdotin/freeport-frontend:latest
-    restart: on-failure
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile.prod
-    ports:
-      - "5010:5010"
-    networks:
-      - freeport
+  # frontend:
+  #   container_name: freeport-frontend
+  #   image: anekdotin/freeport-frontend:latest
+  #   restart: on-failure
+  #   build:
+  #     context: ../frontend
+  #     dockerfile: Dockerfile.prod
+  #   ports:
+  #     - "5010:5010"
+  #   networks:
+  #     - freeport
 
 
-  redis:
-      container_name: freeport-redis
-      image: redis:latest
-      restart: on-failure
-      ports:
-        - '6379:6379'
-      env_file:
-        - .env
-      volumes:
-        - freeport_cache:${REDIS_DIRECTORY}
-      networks:
-        - freeport
-
-  controller:
-    container_name: freeport-controller
-    image: ubuntu:latest
-    ports:
-        - '5099:5099'
-    networks:
-      - freeport
+  # controller:
+  #   container_name: freeport-controller
+  #   image: ubuntu:latest
+  #   ports:
+  #       - '5099:5099'
+  #   networks:
+  #     - freeport
 
 
 
-  coinprice:
-    container_name: freeport-coinprices
-    image: anekdotin/freeport-coinprices:latest
-    ports:
-        - '5054:5054'
-    build:
-       context: ../coinprices
-       dockerfile: Dockerfile.prod
-    networks:
-      - freeport
+  # coinprice:
+  #   container_name: freeport-coinprices
+  #   image: anekdotin/freeport-coinprices:latest
+  #   ports:
+  #       - '5054:5054'
+  #   build:
+  #      context: ../coinprices
+  #      dockerfile: Dockerfile.prod
+  #   networks:
+  #     - freeport
 
 
-  crons:
-    container_name: freeport-crons
-    image: anekdotin/freeport-crons:latest
-    ports:
-        - '5055:5055'
-    build:
-       context: ../crons
-       dockerfile: Dockerfile.prod
-    networks:
-      - freeport
+  # crons:
+  #   container_name: freeport-crons
+  #   image: anekdotin/freeport-crons:latest
+  #   ports:
+  #       - '5055:5055'
+  #   build:
+  #      context: ../crons
+  #      dockerfile: Dockerfile.prod
+  #   networks:
+  #     - freeport
 
 
-  wallet_btc:
-    container_name: freeport-wallet-btc
-    image: anekdotin/freeport-wallet-btc:latest
-    ports:
-        - '5075:5075'
-    build:
-       context: ../wallet_btc
-       dockerfile: Dockerfile.prod
-    networks:
-      - freeport
-    env_file:
-        - .env
-    volumes:
-      - btc_wallet_data:${BTC_WALLET_DATA}
+  # wallet_btc:
+  #   container_name: freeport-wallet-btc
+  #   image: anekdotin/freeport-wallet-btc:latest
+  #   ports:
+  #       - '5075:5075'
+  #   build:
+  #      context: ../wallet_btc
+  #      dockerfile: Dockerfile.prod
+  #   networks:
+  #     - freeport
+  #   env_file:
+  #       - .env
+  #   volumes:
+  #     - btc_wallet_data:${BTC_WALLET_DATA}
 
-  wallet_bch:
-    container_name: freeport-wallet-bch
-    image: anekdotin/freeport-wallet-bch:latest
-    ports:
-        - '5080:5080'
-    build:
-       context: ../wallet_bch
-       dockerfile: Dockerfile.prod
-    networks:
-      - freeport
-    env_file:
-        - .env
-    volumes:
-      - bch_wallet_data:${BCH_WALLET_DATA}
+  # wallet_bch:
+  #   container_name: freeport-wallet-bch
+  #   image: anekdotin/freeport-wallet-bch:latest
+  #   ports:
+  #       - '5080:5080'
+  #   build:
+  #      context: ../wallet_bch
+  #      dockerfile: Dockerfile.prod
+  #   networks:
+  #     - freeport
+  #   env_file:
+  #       - .env
+  #   volumes:
+  #     - bch_wallet_data:${BCH_WALLET_DATA}
 
-  wallet_xmr:
-    container_name: freeport-wallet-xmr
-    image: anekdotin/freeport-wallet-xmr:latest
-    ports:
-        - '5085:5085'
-    build:
-       context: ../wallet_xmr
-       dockerfile: Dockerfile.prod
-    networks:
-      - freeport
-    env_file:
-        - .env
-    volumes:
-      - xmr_wallet_data:${XMR_WALLET_DATA}
+  # wallet_xmr:
+  #   container_name: freeport-wallet-xmr
+  #   image: anekdotin/freeport-wallet-xmr:latest
+  #   ports:
+  #       - '5085:5085'
+  #   build:
+  #      context: ../wallet_xmr
+  #      dockerfile: Dockerfile.prod
+  #   networks:
+  #     - freeport
+  #   env_file:
+  #       - .env
+  #   volumes:
+  #     - xmr_wallet_data:${XMR_WALLET_DATA}
 
 
