--- a/Docker-Compose-PRODUCTION.yml
+++ b/Docker-Compose-PRODUCTION.yml
@@ -18,7 +18,7 @@ services:
     image: anekdotin/freeport-backend:latest
     restart: always
     volumes:
-        - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
+        - /mnt/md1/freeport/data:/data
     depends_on:
         - redis
     deploy:
@@ -33,7 +33,7 @@ services:
       image: nginx:latest
       restart: always
       volumes:
-        - ./nginx.conf:/etc/nginx/conf.d/default.conf
+        - /home/droid/docker/freeport/nginx.conf:/etc/nginx/conf.d/default.conf
       ports:
         - "5000:5000"
       depends_on:
@@ -56,11 +56,12 @@ services:
       ports:
         - '6379:6379'
       volumes:
-        - freeport_cache:${REDIS_DIRECTORY}
+        - /mnt/md1/freeport/redis:/data
       env_file:
         - .env
       networks:
         - freeport
+
 
   coinprice:
     image: anekdotin/freeport-coinprices:latest
@@ -74,7 +75,7 @@ services:
     ports:
         - '5055:5055'
     volumes:
-        - freeport_data_volume:${BACKEND_DATA_DIRECTORY}
+        - /mnt/md1/freeport/data:/data
     env_file:
         - .env
     networks:
@@ -90,7 +91,7 @@ services:
     env_file:
         - .env
     volumes:
-      - freeport_btc_wallet_data:${BTC_WALLET_DATA}
+        - /mnt/md1/freeport/data:/btc_wallet
 
 
   wallet_bch:
@@ -102,7 +103,7 @@ services:
     env_file:
         - .env
     volumes:
-      - freeport_bch_wallet_data:${BCH_WALLET_DATA}
+        - /mnt/md1/freeport/data:/bch_wallet
 
 
   wallet_xmr:
@@ -112,9 +113,10 @@ services:
     env_file:
         - .env
     volumes:
-      - freeport_xmr_wallet_data:${XMR_WALLET_DATA}
+        - /mnt/md1/freeport/data:/xmr_wallet
     networks:
       - freeport
+
 
   controller:
     image: anekdotin/freeport-controller:latest
